# crossguard

./: ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  ROADMAP.md  cli.py  crossguard-architecture.md  crossguard.toml  run_demo.py  setup.py
analysis/: correlator.py  engine.py  selector.py
audits/: starkgate-2026-05.md  starkgate_report.json
crossguard/: cli.py  config.py
crossguard/analysis/: engine.py  taint.py
crossguard/detectors/: base.py  d1_sender.py  d2_types.py  d3_fee.py  d4_cancellation.py  d5_replay.py
crossguard/output/: html.py  sarif.py
crossguard/parsers/: cairo.py  cairo_source.py  solidity.py  solidity_source.py
fixtures/: Bridge_ast.json  StarkBridge_safe.sol  StarkBridge_vuln.sol  bridge_contract.json  bridge_safe.cairo  bridge_vuln.cairo
include/: cairo_parser.hpp  correlator.hpp  detectors.hpp  engine.hpp  formatters.hpp  graph.hpp  json.hpp  solidity_parser.hpp  taint_engine.hpp  types.hpp
ir/: graph.py  types.py
output/: fmt.py
src/: cairo_parser.cpp  correlator.cpp  detectors.cpp  engine.cpp  formatters.cpp  json.cpp  main.cpp  solidity_parser.cpp  taint_engine.cpp
tests/: test_crossguard.cpp  test_crossguard.py
